WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288370
Suppress uncounted lambda capture warning in WebCore::Timer
https://bugs.webkit.org/show_bug.cgi?id=288370
Summary
Suppress uncounted lambda capture warning in WebCore::Timer
Claudio Saavedra
Reported
2025-02-24 08:15:13 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2025-02-24 08:19:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41200
EWS
Comment 2
2025-02-24 11:25:32 PST
Committed
290960@main
(188e126c3653): <
https://commits.webkit.org/290960@main
> Reviewed commits have been landed. Closing PR #41200 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-24 11:26:16 PST
<
rdar://problem/145494512
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug