Suppress uncounted lambda capture warning in WebCore::Timer https://bugs.webkit.org/show_bug.cgi?id=288370

Reviewed by Chris Dumez.

The use pattern of Timer objects is that they are stored as a member variable
of the object that is captured in the lambda, so its lifetime is bound
to the lifetime of the object, therefore there's no risk in capturing
the object uncounted. Furthermore, capturing a reference will cause a circular
reference and a leak. So this warning can be suppressed.

* Source/WebCore/platform/Timer.h:
(WebCore::Timer::Timer):

Canonical link: https://commits.webkit.org/290960@main